--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="week1"/>
+	<classpathentry kind="src" path="week2"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/jfox/algs4/algs4.jar"/>
 	<classpathentry kind="lib" path="/Users/jfox/algs4/stdlib.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="output" path="week1"/>
+	<classpathentry kind="output" path="output"/>
 </classpath>
